--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description" content="Web hidrocompras.com"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Hidrocompras</title>
+    <title>Creaciones Infinitas</title>
   </head>
   <body>
     <div id="root"></div>
